--- a/HospitalManagement/Views/Shared/_MyAdminLayout.cshtml
+++ b/HospitalManagement/Views/Shared/_MyAdminLayout.cshtml
@@ -314,11 +314,11 @@
                                     </li>
                                     <li>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Edit Profile</a>
+                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/EditProfile">Edit Profile</a>
                                         <a class="dropdown-item" href="#">My Balance</a>
                                         <a class="dropdown-item" href="#">Inbox</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/ChangePassword">Change Password</a>
+                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Change Password</a>
                                         <div class="dropdown-divider"></div>
                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
 
