--- a/HospitalManagement/Views/User/Index.cshtml
+++ b/HospitalManagement/Views/User/Index.cshtml
@@ -129,7 +129,22 @@
                 responsive: true,
                 pageLength: 10,
                 dom: '<"html5buttons"B>lTfgitp',
-                buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
+                buttons: [
+                    { extend: 'copy' },
+                    { extend: 'csv' },
+                    { extend: 'excel', title: 'RolesList' },
+                    { extend: 'pdf', title: 'RolesList' },
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+                            $(win.document.body).find('table')
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
+                        }
+                    }
+                ]
             });
         });
 
@@ -153,7 +168,7 @@
                         success: function (response) {
                             if (response.success) {
                                 Swal.fire('Deleted!', response.message, 'success');
-                                $('#userTable').DataTable().ajax.reload();
+                                $('#userTable').DataTable().ajax.reload(); 
                             } else {
                                 Swal.fire('Error!', response.message, 'error');
                             }
