--- a/HospitalManagement/Views/Shared/_NavbarLayout.cshtml
+++ b/HospitalManagement/Views/Shared/_NavbarLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Kaiadmin - Bootstrap 5 Admin Dashboard</title>
+    <title>Admin Panel</title>
     <link rel="icon" href="~/Admin/img/kaiadmin/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Icons -->
@@ -308,19 +308,16 @@
                                                 <div class="u-text">
                                                     <h4>! Welcome</h4>
                                                     <h4>@userName</h4>
-                                                    <a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/EditProfile">Edit Profile</a>
-                                            <a class="dropdown-item" href="#">My Balance</a>
-                                            <a class="dropdown-item" href="#">Inbox</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Change Password</a>
                                             <div class="dropdown-divider"></div>
-                                           <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+                                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" style="color: #e74c3c;">Logout</a>
 
                                         </li>
                                     </div>
