--- a/HospitalManagement/Views/Shared/_UserLayout.cshtml
+++ b/HospitalManagement/Views/Shared/_UserLayout.cshtml
@@ -6,7 +6,7 @@
 	<meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
 	<meta name="author" content="themefisher.com">
 
-	<title>Novena- Health & Care Medical template</title>
+	<title>Hospital Management</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.ico" />
