--- a/HospitalManagement/Areas/Identity/Pages/Account/Manage/EditProfile.cshtml
+++ b/HospitalManagement/Areas/Identity/Pages/Account/Manage/EditProfile.cshtml
@@ -105,6 +105,18 @@
 }
 <section class="content" style="height: calc(100vh - 100px); overflow-y: auto;">
     <div class="container-fluid">
+        <div class="page-header">
+            <h4 class="page-title">Edit Profile</h4>
+            <ul class="breadcrumbs">
+                <li class="nav-home">
+                    <a asp-controller="Dashboard" asp-action="Index">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </li>
+                <li class="separator"><i class="fas fa-chevron-right"></i></li>
+                <li class="nav-item"><a href="#">Edit Profile</a></li>
+            </ul>
+        </div>
         <div class="card shadow">
             <div class="card-header">
                 <h4 class="card-title mb-0">Edit Profile</h4>
