--- a/HospitalManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HospitalManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿
+@page
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
@@ -20,9 +21,9 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger mb-3" role="alert"></div>
 
                         <div class="form-group mb-3">
-                            <label asp-for="Input.UserName" class="form-label"></label>
-                            <input asp-for="Input.UserName" class="form-control" autocomplete="username" placeholder="Enter your username" />
-                            <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                            <label asp-for="Input.Name" class="form-label"></label>
+                            <input asp-for="Input.Name" class="form-control" placeholder="Enter your full name" />
+                            <span asp-validation-for="Input.Name" class="text-danger"></span>
                         </div>
 
                         <div class="form-group mb-3">
