--- a/HospitalManagement/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/HospitalManagement/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -2,6 +2,7 @@
 @model RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
+    Layout = "/Views/Shared/_UserLayout.cshtml";
 }
 
 <h1>@ViewData["Title"]</h1>
